--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -75,21 +75,6 @@
         android:singleLine="true" />
 
 
-    <EditText
-        android:id="@+id/edt_LamaSewa"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_15sdp"
-        android:background="@drawable/edbg"
-        android:hint="Lama Sewa"
-        android:inputType="phone"
-        android:paddingLeft="@dimen/_5sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:singleLine="true" />
-
 
     <EditText
         android:id="@+id/edt_alamatPenyewa"
@@ -228,10 +213,10 @@
 
     <Button
         android:id="@+id/btnConfirm"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
+        android:layout_margin="@dimen/_15sdp"
         android:text="Confirm Now"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@color/white"
