--- a/app/src/main/res/layout/activity_detail__booked.xml
+++ b/app/src/main/res/layout/activity_detail__booked.xml
@@ -82,7 +82,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nama Penyewa "
+                        android:text="Nama Pemilik "
                         android:fontFamily="@font/quicksand_medium"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -120,7 +120,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nama Pengembalian "
+                        android:text="Tanggal Pengembalian "
                         android:fontFamily="@font/quicksand_medium"/>
                     <TextView
                         android:layout_width="wrap_content"
