--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,15 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
+<include
+    layout="@layout/toolbar_main"
+    android:id="@+id/toolbar"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/page"
+        android:layout_below="@id/toolbar"
         android:layout_above="@+id/bottomNavigationView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
