--- a/app/src/main/res/layout/item_row_isi_kategori.xml
+++ b/app/src/main/res/layout/item_row_isi_kategori.xml
@@ -1,50 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/_140sdp"
     android:layout_height="@dimen/_180sdp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
-        <androidx.cardview.widget.CardView
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:layout_marginRight="@dimen/_5sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:id="@+id/cardview_isi_kategori"
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_140sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardElevation="@dimen/_5sdp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:background="@drawable/bg_isi"
-            android:layout_alignParentTop="true"
-            android:focusable="true">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_isi_kategori"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_140sdp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:background="@drawable/bg_isi"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="@dimen/_8sdp"
+        app:cardElevation="@dimen/_5sdp">
 
-                <ImageView
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:id="@+id/habisLayout"
+                android:visibility="gone"
+                android:layout_height="match_parent">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:id="@+id/img_isi_kategori"
-                    android:src="@drawable/website" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:background="#63000000" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/_25sdp"
+                    android:src="#8B000000" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:text="Habis"
+                    android:textColor="?colorOnPrimary"
+                    android:layout_centerInParent="true"
+                    android:textSize="@dimen/_13sdp"/>
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/img_isi_kategori"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/website"
+                android:translationZ="-100dp" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
-        android:layout_marginTop="@dimen/_120sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
         android:layout_marginLeft="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_120sdp"
         android:layout_marginRight="@dimen/_15sdp"
-        android:translationZ="@dimen/_5sdp">
+        android:translationZ="@dimen/_5sdp"
+        app:cardCornerRadius="@dimen/_10sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,23 +83,23 @@
 
 
             <TextView
+                android:id="@+id/txt_isi_kategori"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txt_isi_kategori"
+                android:fontFamily="@font/quicksand_medium"
                 android:gravity="center"
                 android:text="Pakaian"
-                android:textStyle="bold"
-                android:fontFamily="@font/quicksand_medium"/>
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txt_tarif"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txt_tarif"
-                android:text="Rp.50000"
-                android:gravity="center"
-                android:textStyle="bold"
                 android:fontFamily="@font/quicksand_bold"
-                android:textColor="?colorPrimary"/>
+                android:gravity="center"
+                android:text="Rp.50000"
+                android:textColor="?colorPrimary"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
