--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,14 @@
     android:padding="@dimen/_5sdp"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/cencel_24"
+        app:tint="?colorPrimary"
+        android:id="@+id/back"
+        android:layout_margin="@dimen/_20sdp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
