tambahan pesanan,detailstore dll

--- a/app/src/main/res/layout/fragment__barang.xml
+++ b/app/src/main/res/layout/fragment__barang.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Profil.BookedActivity">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_second" />
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Barang.Fragment_Barang">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_centerHorizontal="true"
-         android:id="@+id/recycler_booked"
+        android:id="@+id/recycler_barang"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_row_booked"
+        tools:listitem="@layout/item_row_barang"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="5" />
 
