--- a/app/src/main/res/layout/activity_detail__booked.xml
+++ b/app/src/main/res/layout/activity_detail__booked.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Profil.Detail_BookedActivity">
+    tools:context=".Pesanan.Detail_BookedActivity">
 
     <include
         android:id="@+id/toolbar"
