--- a/app/src/main/res/layout/activity_form_store.xml
+++ b/app/src/main/res/layout/activity_form_store.xml
@@ -133,7 +133,7 @@
                 android:fontFamily="@font/quicksand_bold"
                 android:paddingLeft="@dimen/_5sdp"
                 android:paddingRight="@dimen/_5sdp"
-                android:text="Contact Person"
+                android:text="Gambar Store"
                 android:textColor="?colorPrimary" />
 
             <LinearLayout
