--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -6,11 +6,16 @@
         android:id="@+id/home"
         android:icon="@drawable/home"
         android:title="Home"/>
+    <item
+        android:id="@+id/barang"
+        android:icon="@drawable/pesanan"
+        android:title="Barang"/>
 
     <item
         android:id="@+id/pesanan"
         android:icon="@drawable/pesanan"
         android:title="Pesanan"/>
+
     <item
         android:id="@+id/profil"
         android:icon="@drawable/ic_baseline_account_circle_24"
