Add Rating add SearchActivity add chatWa

--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".Rating.RatingActivity">
 
+    <ImageView
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:src="@drawable/cencel_24"
+        android:layout_alignParentRight="true"
+        android:id="@+id/back"
+        app:tint="?colorPrimary" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/textView"
         android:fontFamily="monospace"
@@ -24,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="5"
+        android:layout_gravity="center"
         android:rating="0"
         android:progressTint="?colorPrimary"
         android:stepSize="0.5" />
@@ -53,6 +67,6 @@
         android:background="#F5DEB3"
         android:text="BERIKAN FEEDBACK" />
 
+    </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
