--- a/app/src/main/res/layout/activity_detail_barang.xml
+++ b/app/src/main/res/layout/activity_detail_barang.xml
@@ -101,7 +101,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_2sdp"
+                    android:layout_height="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:background="?colorSecondaryVariant" />
 
@@ -146,8 +146,8 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/quicksand_bold"
                                 android:text="Nama Pemilik"
-                                android:textSize="@dimen/_20sdp"
-                                android:textColor="?colorPrimary" />
+                                android:textColor="?colorPrimary"
+                                android:textSize="@dimen/_20sdp" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -164,8 +164,8 @@
                                     android:id="@+id/txt_store"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/quicksand_medium"
                                     android:layout_gravity="center"
+                                    android:fontFamily="@font/quicksand_medium"
                                     android:text="Nama Toko" />
                             </LinearLayout>
                         </LinearLayout>
@@ -188,10 +188,10 @@
                             android:id="@+id/txt_alamat_penyedia"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/quicksand_bold"
-                            android:layout_gravity="center"
-                            android:text="Padang"/>
+                            android:text="Padang" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -208,12 +208,12 @@
 
                         <TextView
                             android:id="@+id/txt_telp"
-                            android:layout_gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/quicksand_bold"
-                            android:text="08129048"/>
+                            android:text="08129048" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -230,9 +230,9 @@
 
                         <TextView
                             android:id="@+id/txt_WA"
-                            android:layout_gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/quicksand_bold"
                             android:text="08129048" />
@@ -241,6 +241,132 @@
 
                 </LinearLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:background="?colorSecondaryVariant" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:layout_marginRight="@dimen/_20sdp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/quicksand_bold"
+                                android:text="Penilaian Ulasan Barang"
+                                android:textSize="@dimen/_14sdp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/quicksand_medium"
+                                android:id="@+id/rateKosong"
+                                android:visibility="visible"
+                                android:text="Rating belum Tersedia"/>
+                            <RelativeLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="visible"
+                                android:layout_marginBottom="-10dp"
+                                android:id="@+id/ulasanLayout"
+                                android:orientation="horizontal">
+
+                                <androidx.appcompat.widget.AppCompatRatingBar
+                                    android:id="@+id/ratingBar"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:isIndicator="true"
+                                    android:numStars="5"
+                                    android:progressTint="?colorPrimary"
+                                    android:rating="3.4"
+                                    android:scaleX=".5"
+                                    android:scaleY=".5"
+                                    android:stepSize="0.5"
+                                    android:transformPivotX="0dp"
+                                    android:transformPivotY="10dp" />
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="-110dp"
+                                    android:layout_toRightOf="@id/ratingBar"
+                                    android:orientation="horizontal">
+
+                                    <TextView
+                                        android:id="@+id/ratingCount"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:layout_gravity="bottom"
+                                        android:fontFamily="@font/quicksand_bold"
+                                        android:gravity="bottom"
+                                        android:text="2.3"
+                                        android:textColor="?colorPrimary"
+                                        android:textSize="@dimen/_14sdp" />
+
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:layout_gravity="bottom"
+                                        android:fontFamily="@font/quicksand_bold"
+                                        android:gravity="bottom"
+                                        android:text="/5"
+                                        android:textColor="?colorPrimary"
+                                        android:textSize="@dimen/_12sdp" />
+                                </LinearLayout>
+
+
+                            </RelativeLayout>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Lihat Semua >"
+                            android:textColor="?colorPrimary"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:fontFamily="@font/quicksand_bold"
+                            android:textAlignment="viewEnd"/>
+
+
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:background="?colorSecondaryVariant" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:spanCount="5"
+                        tools:listitem="@layout/row_ulasan"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        android:id="@+id/rvUlasan"/>
+
+
+                </LinearLayout>
 
             </LinearLayout>
 
