--- a/app/src/main/res/layout/activity_barang.xml
+++ b/app/src/main/res/layout/activity_barang.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Barang.Fragment_Barang">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".Barang.BarangActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_second" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_centerHorizontal="true"
@@ -14,7 +19,4 @@
         tools:listitem="@layout/item_row_barang"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="5" />
-
-
-
 </LinearLayout>
