--- a/app/src/main/res/layout/activity_detail__barang_sewa.xml
+++ b/app/src/main/res/layout/activity_detail__barang_sewa.xml
@@ -111,7 +111,16 @@
                         android:textColor="?colorPrimary"
                         android:layout_alignParentRight="true"
                         android:id="@+id/alamat"/>
+
                 </RelativeLayout>
+                <TextView
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Status Pembelian"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:textColor="?colorPrimary"
+                    android:id="@+id/statuspembelian"/>
 
             </LinearLayout>
 
