--- a/app/src/main/res/layout/fragment__profil.xml
+++ b/app/src/main/res/layout/fragment__profil.xml
@@ -103,6 +103,36 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_marginTop="@dimen/_2sdp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        android:id="@+id/btn_barangSaya"
+        android:background="?android:windowBackground"
+        android:textAlignment="textStart"
+        android:backgroundTint="?colorPrimaryVariant"
+        android:textColor="?colorOnPrimary">
+
+        <ImageView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/ic_baseline_storefront_24"
+            app:tint="@color/white"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/_15sdp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barang Saya"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:fontFamily="@font/quicksand_bold"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_15sdp"/>
+
+    </LinearLayout>
+
 
 
     <LinearLayout
