--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -7,14 +7,14 @@
         android:icon="@drawable/home"
         android:title="Home"/>
     <item
-        android:id="@+id/barang"
+        android:id="@+id/pesanan_masuk"
         android:icon="@drawable/pesanan"
-        android:title="Barang"/>
+        android:title="Pesanan Masuk "/>
 
     <item
         android:id="@+id/pesanan"
         android:icon="@drawable/pesanan"
-        android:title="Pesanan"/>
+        android:title="Pesanan Saya"/>
 
     <item
         android:id="@+id/profil"
