--- a/app/src/main/res/layout/activity_detail_barang.xml
+++ b/app/src/main/res/layout/activity_detail_barang.xml
@@ -360,6 +360,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         app:spanCount="5"
                         tools:listitem="@layout/row_ulasan"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
