--- a/app/src/main/res/layout/row_ulasan.xml
+++ b/app/src/main/res/layout/row_ulasan.xml
@@ -66,7 +66,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_5sdp"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginRight="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:background="?colorSecondaryVariant" />
