--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -105,7 +105,7 @@
             android:id="@+id/btn_daftar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:textColor="?colorSecondary"
+            android:textColor="@color/white"
             android:fontFamily="@font/quicksand_bold"
             android:text="Daftar" />
 
